# zeek-matchy-plugin

./: .gitignore  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  TROUBLESHOOTING.md  WARP.md
scripts/: main.zeek
src/: Plugin.cc  Plugin.h  matchy.bif
tests/: README.md  basic-test.zeek  readme-advanced-example.zeek  readme-advanced-verified.zeek  readme-basic-example.zeek  simple-test.zeek  test-data.csv  test-json.zeek  test.mxy
